gcc/testsuite/g++.old-deja/g++.mike/net44.C
// { dg-do assemble  }
// Make sure we don't dump core

enum request { q, w, e};		// { dg-message "" } 

class request {				// { dg-error "" } 
public:
  int a;
  request( int b) {
    a = b;
  };
};
